Finished HW2 and downloaded HW3.

--- a/cs24hw2/Makefile
+++ b/cs24hw2/Makefile
@@ -2,7 +2,7 @@ all: factmain
 
 # perhaps use this as you develop further parts 
 # of the assignment
-#all: factmain gcdmain 
+all: factmain gcdmain 
 
 factmain.o:	fact.h factmain.c
 fact.o:	fact.s
