--- a/cs24hw6/sthreads/Makefile
+++ b/cs24hw6/sthreads/Makefile
@@ -11,17 +11,24 @@ CFLAGS = -Wall -g -std=c99 -pedantic
 ASFLAGS = -g
 
 
-all: test
+all: test test_arg test_ret
 
 
 # The simple test program
 test: sthread.o glue.o test.o
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 
+# The test_arg program
+test_arg: sthread.o glue.o test_arg.o
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+
+# The test_ret program
+test_ret: sthread.o glue.o test_ret.o
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 
 # pseudo-target to clean up
 clean:
-	$(RM) -f *.o core* *~ test
+	$(RM) -f *.o core* *~ test test_arg test_ret
 
 
 .PHONY: all clean
@@ -30,4 +37,5 @@ clean:
 # Dependencies
 sthread.c: sthread.h
 test.c: sthread.h
-
+test_arg.c: sthread.h
+test_ret.c: sthread.h
